<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".MainActivity">

    <SeekBar
        android:id="@+id/seekBarTempo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonPause"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textTempo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/buttonPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/play"
        android:contentDescription="@string/playButton"
        android:onClick="executarSom"
        app:layout_constraintBottom_toBottomOf="@+id/buttonPause"
        app:layout_constraintEnd_toStartOf="@+id/buttonPause"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonPause" />

    <Button
        android:id="@+id/buttonPause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/pause"
        android:contentDescription="@string/pauseButton"
        android:onClick="pausarSom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonStop"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonPlay"
        app:layout_constraintTop_toBottomOf="@+id/seekBarTempo" />

    <Button
        android:id="@+id/buttonStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/stop"
        android:contentDescription="@string/stopButton"
        android:onClick="pararSom"
        app:layout_constraintBottom_toBottomOf="@+id/buttonPause"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonPause"
        app:layout_constraintTop_toTopOf="@+id/buttonPause" />

    <TextView
        android:id="@+id/textTempo"
        android:layout_width="35dp"
        android:layout_height="0dp"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/seekBarTempo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/seekBarTempo" />

    <SeekBar
        android:id="@+id/seekBarVolume"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageVolume"
        app:layout_constraintTop_toBottomOf="@+id/buttonPause" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/imagemMusica"
        app:layout_constraintBottom_toTopOf="@+id/textNome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/children_of_the_sky_img" />

    <ImageView
        android:id="@+id/imageVolume"
        android:layout_width="35dp"
        android:layout_height="0dp"
        android:contentDescription="@string/volume"
        app:layout_constraintBottom_toBottomOf="@+id/seekBarVolume"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/seekBarVolume"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_volume" />

    <TextView
        android:id="@+id/textNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/nomeMusica"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/artistaMusica"
        app:layout_constraintBottom_toTopOf="@+id/seekBarTempo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>